force-app/main/default/objects/Contract/fields/Applicant_Names_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Names_Formatted__c</fullName>
    <description>Produces a formatted string separating Applicant Names with commas and new line characters.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Names Formatted</label>
    <type>TextArea</type>
</CustomField>