force-app/main/default/objects/Contract/fields/ApplicantNames__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNames__c</fullName>
    <formula>IndividualApplicationId__r.ApplicantNames__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Names</label>
    <type>Text</type>
</CustomField>