force-app/main/default/objects/Contract/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <description>Field to display Created Date as a Date Value with a custom label for list views and reports. aligns field syntax with Provisional Application</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>