force-app/main/default/objects/Contract/fields/ApplicationCaseId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Final Applications</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>