force-app/main/default/objects/Contract/fields/Assessed_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Property_Value__c</fullName>
    <inlineHelpText>Assessed property value refers to the property&apos;s valuation, as determined by the bank&apos;s assessors.</inlineHelpText>
    <label>Assessed Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>