force-app/main/default/objects/Contract/fields/Case_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Auto_Number__c</fullName>
    <description>Field used for merging into Email Templates</description>
    <formula>ApplicationCaseId__r.CaseNumber</formula>
    <label>Case Auto Number</label>
    <type>Text</type>
</CustomField>