force-app/main/default/objects/Contract/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <formula>Text(ApplicationCaseId__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of related Case</inlineHelpText>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>