force-app/main/default/objects/Contract/fields/Contract_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sign_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract of Sale Sign Date</label>
    <type>Date</type>
</CustomField>