force-app/main/default/objects/Contract/fields/Declaration_of_EC__c.field-meta.xml
<CustomField>
    <fullName>Declaration_of_EC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration of Electronic Communication</label>
    <type>Checkbox</type>
</CustomField>