force-app/main/default/objects/Contract/fields/Final_Application_Documents_Conga__c.field-meta.xml
<CustomField>
    <fullName>Final_Application_Documents_Conga__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[contracts]a0E5P000000d7VVUAY&quot; + 
&quot;&amp;templateid=[Final+Approval+Notice]a0M5P000001O05IUAS&quot; + 
&quot;&amp;qmode=SalesforceFile&quot; +
&quot;&amp;DS7=12&quot; +
&quot;&amp;FP0=1&quot; +
&quot;&amp;APDF=0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Application Documents Conga</label>
    <type>Text</type>
</CustomField>