force-app/main/default/objects/Contract/fields/Final_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Date__c</fullName>
    <description>Captures the date final approval is granted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Approval Date</label>
    <type>Date</type>
</CustomField>