force-app/main/default/objects/Contract/fields/FinalApprovalDateFormatted__c.field-meta.xml
<CustomField>
    <fullName>FinalApprovalDateFormatted__c</fullName>
    <description>Formula field to format the final approval date</description>
    <formula>TEXT(DAY( Final_Approval_Date__c ))+ &quot; &quot; +
CASE(MONTH( Final_Approval_Date__c ),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  &quot;December&quot;
)
+ &quot; &quot; +TEXT(YEAR( Final_Approval_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinalApprovalDateFormatted</label>
    <type>Text</type>
</CustomField>