force-app/main/default/objects/Contract/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Folio</label>
    <length>4</length>
    <type>Text</type>
</CustomField>