force-app/main/default/objects/Contract/fields/Funds_Transferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Funds_Transferred_Date__c</fullName>
    <formula>ApplicationCaseId__r.Funds_Transferred_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Transferred Date</label>
    <type>Date</type>
</CustomField>