force-app/main/default/objects/Contract/fields/Has_Existing_Dwelling__c.field-meta.xml
<CustomField>
    <fullName>Has_Existing_Dwelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Applicant in FHLDS?</label>
    <type>Checkbox</type>
</CustomField>