force-app/main/default/objects/Contract/fields/IndividualApplicationId__c.field-meta.xml
<CustomField>
    <fullName>IndividualApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provisional Application ID</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Final Applications</relationshipLabel>
    <relationshipName>Contracts_del</relationshipName>
    <type>Lookup</type>
</CustomField>