force-app/main/default/objects/Contract/fields/Initial_Acquisition_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_Acquisition_Price__c</fullName>
    <label>Initial Acquisition Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>