force-app/main/default/objects/Contract/fields/Interest_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Type__c</fullName>
    <label>Interest Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed rate</fullName>
            </value>
            <value>
                <fullName>Variable rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>