force-app/main/default/objects/Contract/fields/IsEstablishedOrNewHome__c.field-meta.xml
<CustomField>
    <fullName>IsEstablishedOrNewHome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the property an established home (one that has been previously occupied) or a new home with a certificate of occupancy?</description>
    <label>Existing or New Home</label>
    <type>Checkbox</type>
</CustomField>