force-app/main/default/objects/Contract/fields/IsRegionalProperty__c.field-meta.xml
<CustomField>
    <fullName>IsRegionalProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRegionalProperty</label>
    <type>Checkbox</type>
</CustomField>