force-app/main/default/objects/Contract/fields/IsSettlement__c.field-meta.xml
<CustomField>
    <fullName>IsSettlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSettlement</label>
    <type>Checkbox</type>
</CustomField>