force-app/main/default/objects/Contract/fields/Loan_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Loan Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>