force-app/main/default/objects/Contract/fields/Loan_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Years__c</fullName>
    <inlineHelpText>Loan Term Should be between 2 - 30 years</inlineHelpText>
    <label>Loan Term (Years)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>