force-app/main/default/objects/Contract/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lot Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>