force-app/main/default/objects/Contract/fields/LVR__c.field-meta.xml
<CustomField>
    <fullName>LVR__c</fullName>
    <label>Loan to Value Ratio %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>