force-app/main/default/objects/Contract/fields/Owners_Corporation__c.field-meta.xml
<CustomField>
    <fullName>Owners_Corporation__c</fullName>
    <description>Required as part of Participation Agreement field merge</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Owners Corporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>