force-app/main/default/objects/Contract/fields/Panel_Finance_Officer_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Panel_Finance_Officer_FirstName__c</fullName>
    <formula>Panel_Finance_Officer__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Finance Officer FirstName</label>
    <type>Text</type>
</CustomField>