force-app/main/default/objects/Contract/fields/Panel_Financier_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Name__c</fullName>
    <formula>Panel_Finance_Officer__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Financier Name</label>
    <type>Text</type>
</CustomField>