force-app/main/default/objects/Contract/fields/Personal_Details_Changed__c.field-meta.xml
<CustomField>
    <fullName>Personal_Details_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Details Changed</label>
    <type>Checkbox</type>
</CustomField>