force-app/main/default/objects/Contract/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>