force-app/main/default/objects/Contract/fields/Processing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Processing_Officer__c</fullName>
    <formula>IF( 
  ISBLANK(ApplicationCaseId__r.Owner:Queue.Id),
  ApplicationCaseId__r.Owner:User.FirstName &amp; &quot; &quot; &amp; ApplicationCaseId__r.Owner:User.LastName,
  ApplicationCaseId__r.Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Owner of related Case</inlineHelpText>
    <label>Processing Officer</label>
    <type>Text</type>
</CustomField>