force-app/main/default/objects/Contract/fields/Program_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Exit_Date__c</fullName>
    <description>Participant is not permitted to exit the program prior to this date. Calculated as 2 years from settlement date.</description>
    <formula>IF(
  AND(
    MONTH(  Settlement_Date__c  ) = 2,
    DAY( Settlement_Date__c  ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Settlement_Date__c  ) + 2, 400 ) = 0, 
        AND( 
          MOD( YEAR( Settlement_Date__c  ) + 2, 4 ) = 0,
          MOD( YEAR( Settlement_Date__c   ) + 2, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Settlement_Date__c  ) + 2, 3, 1),
  DATE( YEAR( Settlement_Date__c  ) + 2, MONTH( Settlement_Date__c  ), DAY( Settlement_Date__c  ) )
)</formula>
    <label>Program Exit Date</label>
    <type>Date</type>
</CustomField>