force-app/main/default/objects/Contract/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property related to the final application once approved and settled</description>
    <label>Property</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Final Applications (Property)</relationshipLabel>
    <relationshipName>Final_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>