force-app/main/default/objects/Contract/fields/Property_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Purchase_Price__c</fullName>
    <label>Property Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>