force-app/main/default/objects/Contract/fields/Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Location__c</fullName>
    <label>Purchase Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater Melbourne and Geelong</fullName>
            </value>
            <value>
                <fullName>Regional Victoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>