force-app/main/default/objects/Contract/fields/Rejection_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Cancellation_Reason__c</fullName>
    <description>Reason for cancelling/rejecting the application</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter details for rejecting/cancelling this application</inlineHelpText>
    <label>Rejection/Cancellation Comments</label>
    <type>TextArea</type>
</CustomField>