force-app/main/default/objects/Contract/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property is in an ineligible location</fullName>
            </value>
            <value>
                <fullName>Identification documents were not provided</fullName>
            </value>
            <value>
                <fullName>Discrepancies between application and contract details</fullName>
            </value>
            <value>
                <fullName>Certificate of Occupancy was not provided</fullName>
            </value>
            <value>
                <fullName>Contract of Sale was not provided</fullName>
            </value>
            <value>
                <fullName>Applicant is not an Australian Citizen or PR holder</fullName>
            </value>
            <value>
                <fullName>Applicant deposit contribution is less than 3.5%</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Applicant is not an Australian Citizen</fullName>
                <isActive>false</isActive>
                <label>Applicant is not an Australian Citizen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>