force-app/main/default/objects/Contract/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>Scheduled Settlement Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>1.Must be later than Today&apos;s date.

2.If scheduled settlement date is less than 5 working days, then turnaround times may be more.</inlineHelpText>
    <label>Scheduled Settlement Date</label>
    <type>Date</type>
</CustomField>