force-app/main/default/objects/Contract/fields/Tenanted_History__c.field-meta.xml
<CustomField>
    <fullName>Tenanted_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenanted for 12+ months</label>
    <type>Checkbox</type>
</CustomField>