force-app/main/default/objects/Contract/fields/Total_amount_to_be_transferred__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_to_be_transferred__c</fullName>
    <description>Field calculated as (Final Shared Equity Contribution + Registration fee + PEXA fee)
Used by SRO Finance to view the total amount to be transferred and in VGSO email templates.</description>
    <formula>VHF_Contribution__c + 112.40 + 59.07</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total amount = Final Shared Equity Contribution +  $112.40 Registration fee + $59.07 PEXA fee</inlineHelpText>
    <label>Total amount to be transferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>