force-app/main/default/objects/Contract/fields/VHF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>VHF_Contribution__c</fullName>
    <label>Final Shared Equity Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>