force-app/main/default/objects/Contract/fields/vlocity_ins__AgencyBrokerageId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency/Brokerage</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>