force-app/main/default/objects/Contract/fields/vlocity_ins__ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>vlocity_ins__Application__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>