force-app/main/default/objects/Contract/fields/vlocity_ins__ContractType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractType__c</fullName>
    <description>The contract type this contract belongs to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>