force-app/main/default/objects/Contract/fields/vlocity_ins__EnrollmentWaitingPeriod__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EnrollmentWaitingPeriod__c</fullName>
    <label>Enrollment Waiting Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>