force-app/main/default/objects/Contract/fields/vlocity_ins__LastDocumentBatchJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LastDocumentBatchJobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Batch Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>