force-app/main/default/objects/Contract/fields/vlocity_ins__LastDocumentBatchJobStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LastDocumentBatchJobStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Batch Job Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>