force-app/main/default/objects/Contract/fields/vlocity_ins__LastDocuSignEnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LastDocuSignEnvelopeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last DocuSign Envelope Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>